Increase font size and change header position to sticky, to fix chrome on iOS hiding the header

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -3,6 +3,10 @@ body {
     "Helvetica Neue", sans-serif;
 }
 
+p,ul,ol{
+  text-align: left;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,7 +19,7 @@ a {
 }
 
 .scrollContainer {
-  margin-top: 60px;
+  font-size: 1.125em;
 }
 
 .scrollElement {
@@ -47,6 +51,9 @@ a {
     #0083b0,
     #00b4db
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  h1 {
+    margin-bottom: 1rem;
+  }
 }
 
 .header button {
@@ -111,7 +118,7 @@ a {
 .about-column:first-child {
   margin-bottom: 1em;
   @media screen and(min-width: 60em) {
-    margin-bottom: 1%; 
+    margin-bottom: 1%;
   }
 }
 
@@ -136,10 +143,6 @@ a {
   @media screen and(min-width: 60em) {
     flex-direction: column;
   }
-}
-
-.experience ul {
-  text-align: left;
 }
 
 .experience-container {
@@ -296,5 +299,6 @@ a {
 }
 
 .footer p {
+  text-align: center;
   margin-bottom: 0;
 }
